fixed gap at bottom of opportunities section

--- a/Code/Website/public/style.css
+++ b/Code/Website/public/style.css
@@ -272,7 +272,7 @@ border-radius: 0% 0% 1em 1em;
 }
 
 .section.no_margin_bottom {
-    margin-bottom: -2.5%;
+    margin-bottom: 0%;
 }
 
 .section_title {
